--- a/Basics/practice.html
+++ b/Basics/practice.html
@@ -5,17 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>HTML Basics</title>
   <!-- CSS has three implementations: Inline, Internal, External -->
-  <!-- This is ***Internal CSS*** -->
+  <!-- ***Internal CSS*** -->
   <!-- <style>
     body {
       background-color: slategrey;
     }
   </style> -->
 
-  <!-- Importing ***EXTERNAL CSS StyleSheet*** -->
+  <!-- ***EXTERNAL CSS*** -->
   <!-- 
     These two lines are exactly the same. However, href starting with / means relative to root folder
-    and href
     <link rel="stylesheet" href="/Basics/CSS/practice.css">
     <link rel="stylesheet" href="./../CSS/practice.css">
 
